--- a/config/totem.conf
+++ b/config/totem.conf
@@ -1,5 +1,6 @@
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
+CONFIG_BT_CTLR_PHY_2M=n 
 
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
@@ -18,3 +19,4 @@ CONFIG_DONGLE_SCREEN_MODIFIER_ACTIVE=y
 CONFIG_DONGLE_SCREEN_LAYER_ACTIVE=y
 CONFIG_DONGLE_SCREEN_OUTPUT_ACTIVE=y
 CONFIG_DONGLE_SCREEN_BATTERY_ACTIVE=y
+
