--- a/config/includes/combos.dtsi
+++ b/config/includes/combos.dtsi
@@ -62,17 +62,16 @@ ZMK_COMBO(tab,         &kp TAB,        LB1 LB0,    WIN MAC NAV    , COMBO_TERM_S
 
 /* Horizontal  Right   */
 ZMK_COMBO(grave,       &kp GRAVE,      RM0 RM1,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(sqt,	       &kp SQT,        RM1 RM2,    WIN MAC NAV    , COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(dqt,         &kp DQT,        RM2 RM3,    WIN MAC NAV    , COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(lbkt,        &kp LBKT,       RM1 RM2,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(rbkt,        &kp RBKT,       RM2 RM3,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 ZMK_COMBO(under,       &kp UNDER,      RB0 RB1,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(lbkt,        &kp LBKT,       RB1 RB2,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(rbkt,        &kp RBKT,       RB2 RB3,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(sqt,	       &kp SQT,        RB1 RB2,    WIN MAC NAV    , COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(dqt,         &kp DQT,        RB2 RB3,    WIN MAC NAV    , COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
 
 /* Thumb combos */  
-ZMK_COMBO(flow,		   &kp LG(SPACE),  LH2 LH1,    WIN MAC NAV	  ,	COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(dot,         &dot_morph,     LH1 LH0,    WIN MAC NAV    ,	COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(tsmouse,     &smart_mouse,   LH2 LH1,    WIN MAC NAV NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(flow,		   &kp LG(SPACE),  LH1 LH0,    WIN MAC NAV	  ,	COMBO_TERM_FAST, COMBO_IDLE_FAST)
 ZMK_COMBO(ttab,        &kp TAB,        RH0 RH1,    WIN MAC NAV NUM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(tsmouse,     &smart_mouse,   RH1 RH2,    WIN MAC NAV NUM, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 
 /* Num Layer */
 ZMK_COMBO(lgs3,        &kp LG(LS(N3)), LT3 LM3,    NUM  	      , COMBO_TERM_FAST, COMBO_IDLE_FAST)
